--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -3,6 +3,7 @@ text-decoration: none;
 }
 
 .page-header{
+    max-width: 1600px;
     margin-left: auto;
     margin-right: auto;
     background-repeat: no-repeat;
@@ -34,6 +35,10 @@ font-size: 30px;
 line-height: 35px;
 color: #fff;
 
+@media screen and (max-width: 767px) {
+    display: none;
+}
+
 }
 
 
@@ -54,10 +59,14 @@ color: #fff;
 }
 
 .site-nav__btn {
+    font-family: Roboto;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
     color:#FFFFFF;
     position: relative;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     background-color: transparent;
     margin-left: 40px;
     border: none;
@@ -110,7 +119,7 @@ padding-bottom: 60px;
 .icon-search {
     position: absolute;
     right: 0;
-    top: 42%;
+    top: 25%;
     content: "";
 }
     
