update css js header

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -9,7 +9,7 @@ text-decoration: none;
     background-repeat: no-repeat;
     background-size: cover;
     background: rgba(0, 0, 0, 0.56);
-    background-image: url(../images/Rectangle2@2x.jpg);
+    background-image: url(../images/home-bg@2x.jpg);
 }
 .main-nav {
     display: flex;
