--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -3,6 +3,8 @@
     <div class="container">
         <h2 class="visually-hidden">Выбор фильмов</h2>
         <ul class="gallery"></ul>        
-    </div>    
-    <div id="tui-pagination-container" class="tui-pagination"></div>
+    </div>   
+    <div class="pagination-thumb">
+        <div id="tui-pagination-container" class="tui-pagination"></div>
+    </div>     
 </section>
