--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,6 +1,19 @@
-.gallery {
-    display: flex;
-    flex-wrap: wrap;
+.section {
+   margin-top: 20px;
+   margin-bottom: 40px;
+
+   @media screen and (min-width: 768px) {
+    margin-top: 60px; 
+    margin-bottom: 60px;
+  }  
+}
+
+.pagination-thumb {
+  margin-top: 40px;
+
+   @media screen and (min-width: 768px) {
+    margin-top: 50px;      
+  }  
 }
 
 .visually-hidden {
