--- a/src/template/tmp-card.hbs
+++ b/src/template/tmp-card.hbs
@@ -9,6 +9,9 @@
             <p class="info-item">
                {{vote_average}}
             </p>
+            <p class="film-genre">
+                {{genres}}
+                </p>
         </div>
     
 </div>
