--- a/src/template/tmp-card.hbs
+++ b/src/template/tmp-card.hbs
@@ -1,7 +1,7 @@
 {{#each this}}
 <div class="photo-card">
     
-        <div class="thumb"><img src="https://www.themoviedb.org/t/p/w300{{poster_path}}" loading="lazy"/></div>
+        <div class="thumb"><img src="https://www.themoviedb.org/t/p/w300{{poster_path}}" loading="lazy" data-movie-id="{{id}}"/></div>
         <div class="info">
             <p class="title">
                 {{title}}
