--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -29,3 +29,23 @@
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 35px;
+  margin-top: calc(-1 * 10px);
+  margin-left: calc(-1 * 10px);
+}
+
+
+.photo-card {
+  margin-top: 20px;
+  margin-left: 10px;
+  height: auto;
+  flex-basis: calc(100% / 4 - 10px);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 0 0 5px 5px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+}
