--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,22 +1,14 @@
-/*
- * Главный файл стилей.
- * Все паршалы подключаются сюда.
- */
-
-// Стили для файла с примером HTML-фрагмента
-// @import './example';
+@import './utils/variables';
+@import './base/base';
+@import './header';
+@import './container';
+@import './gallery';
+@import './pagination';
+@import './modal';
+@import './footer';
 
 .menu__icon {
   color: aqua;
   fill: black;
   border: 1 px solid red;
 }
-
-@import './example';
-
-@import './container';
-@import './gallery';
-@import './pagination';
-@import './header';
-@import './modal';
-@import './footer';
