--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -5,12 +5,12 @@
   margin-left: auto;
   margin-right: auto;
 
-  @media screen and (min-width: 768px) {
-    max-width: 768px;
+  @media screen and (min-width: $tablet) {
+    max-width: $tablet;
   }
 
-  @media screen and (min-width: 1024px) {
-    max-width: 1024px;
+  @media screen and (min-width: $desktop) {
+    max-width: $desktop;
   }
 }
 
