--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,20 +1,19 @@
 .footer {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #F7F7F7;
+  background-color: $footer-bgd-color;
 }
 
 .footer-lisense {
   margin: 0;
   padding: 0;
   text-align: center;
-  font-family: Roboto;
-  color: rgba(84, 84, 84, 1);
+  color: $footer-text-color;
   font-size: 14px;
   line-height: 1.14;
 
 
-  @media  screen and (min-width: 768px) {
+  @media  screen and (min-width: $tablet) {
     font-size: 16px;
     line-height: 1.17;
     display: flex;
@@ -23,7 +22,7 @@
    
   }
 
-  @media screen and (min-width: 1024px) {
+  @media screen and (min-width: $desktop) {
     font-size: 16px;
     line-height: 1.17;
     
