--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -2,7 +2,7 @@
    margin-top: 20px;
    margin-bottom: 40px;
 
-   @media screen and (min-width: 768px) {
+   @media screen and (min-width: $tablet) {
     margin-top: 60px; 
     margin-bottom: 60px;
   }  
@@ -11,7 +11,7 @@
 .pagination-thumb {
   margin-top: 40px;
 
-   @media screen and (min-width: 768px) {
+   @media screen and (min-width: $tablet) {
     margin-top: 50px;      
   }  
 }
