--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,7 +1,3 @@
-a {
-text-decoration: none;
-}
-
 .page-header{
     max-width: 1600px;
     height: 230px;
@@ -9,7 +5,7 @@ text-decoration: none;
     margin-right: auto;
     background-repeat: no-repeat;
     background-size: cover;
-    background: rgba(0, 0, 0, 0.56);
+    background: $background-color;
     background-image: linear-gradient(rgba(0,0,0,.56),rgba(0,0,0,.56)), url(../images/home-bg-new.jpg);
 }
 
@@ -34,12 +30,10 @@ text-decoration: none;
 
 .logo-text {
 margin-left: 40px;
-font-family: Roboto;
-font-style: normal;
 font-weight: 500;
 font-size: 30px;
 line-height: 35px;
-color: #fff;
+color: $white-color;
 
 @media screen and (max-width: 767px) {
     display: none;
@@ -65,11 +59,10 @@ color: #fff;
 }
 
 .site-nav__btn {
-    font-family: Roboto;
     font-weight: 500;
     font-size: 12px;
     line-height: 14px;
-    color:#FFFFFF;
+    color:$white-color;
     position: relative;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -88,7 +81,7 @@ color: #fff;
   content: "";
   width: 100%;
   display: block;
-  background-color: #FF6B08;
+  background-color: $accent-color;
   height: 3px;
   border-radius: 1px;
 }
@@ -107,8 +100,8 @@ padding-bottom: 60px;
     
 }
 .input{
-    color: #fff;
-    border-bottom: 1px solid #FFFFFF;
+    color: $white-color;
+    border-bottom: 1px solid $white-color;
     padding: 10px;
     width: 100%;
     border-top: 0;
@@ -118,7 +111,7 @@ padding-bottom: 60px;
 }
 
 .input::placeholder {
-    color: #fff;
+    color: $white-color;
     margin:0;
     padding: 0;
 }
@@ -140,8 +133,8 @@ padding-bottom: 50px;
 
 
 .btn-controls {
-    border: 1px solid #FFFFFF;
-    color: #fff;
+    border: 1px solid $white-color;
+    color: $white-color;
     padding: 15px;
     margin-right: 15px;
     width: 130px;
@@ -151,7 +144,7 @@ padding-bottom: 50px;
 
 .active-btn {
     border:none;
-    background:#FF6B08;
+    background:$accent-color;
 }
 
 .is-hidden {
