--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -31,9 +31,8 @@
   overflow-x: auto;
   position: relative;
   margin: auto;
-  background-color: white;
-  font-family: Roboto;
-
+  background-color: $white-color;
+  
   font-size: 14px;
   line-height: 1.14;
   color: rgba(84, 84, 84, 1);
@@ -50,15 +49,15 @@
   height: 40px;
   text-align: center;
   border-radius: 5px;
-  background-color: white;
+  background-color: $white-color;
   cursor: pointer;
   border: 1px solid rgba(84, 84, 84, 1);
 
   &:hover,
   &:focus {
-    background-color: orange;
-    color: white;
-    border: 1px solid orange;
+    background-color: $accent-modal-color;
+    color: $white-color;
+    border: 1px solid $accent-modal-color;
   }
 }
 
