--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -4,7 +4,7 @@
     margin-right: auto;  
     margin-left: auto;         
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $tablet) {
     max-width: 374px; 
     }      
 }
