--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -2,5 +2,8 @@ $white-color: #FFFFFF;
 $footer-text-color: #545454;
 $title-text-color: #000000;
 $accent-color: #FF6B08;
+$accent-modal-color: #FF6B01;
+$background-color: rgba(0, 0, 0, 0.56);
+$footer-bgd-color: #F7F7F7;
 
 $primary-font-family: 'Roboto', sans-serif;
