--- a/src/template/modal-card-about-film.hbs
+++ b/src/template/modal-card-about-film.hbs
@@ -3,7 +3,7 @@
 <div class="modal__container">
     <div class="film__image">
     
-    <img class="movie-card__poster poster" data-movie-id={{id}} src="https://image.tmdb.org/t/p/w500{{poster_path}}" alt="Movie Poster"/>
+    <img class="image" data-movie-id={{id}} src="https://image.tmdb.org/t/p/w500{{poster_path}}" alt="Movie Poster"/>
     </div>
 
 
