--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,6 +1,8 @@
-$white-color: #FFFFFF;
+$white-color: #ffffff;
 $footer-text-color: #545454;
 $title-text-color: #000000;
-$accent-color: #FF6B08;
+$accent-color: #ff6b08;
+$background-color: rgba(0, 0, 0, 0.8);
+$background-modal-color: lightgrey;
 
 $primary-font-family: 'Roboto', sans-serif;
