--- a/src/template/modal-card-about-film.hbs
+++ b/src/template/modal-card-about-film.hbs
@@ -40,10 +40,10 @@
                 {{this.overview}}
             </p>
         </div>
-        <div class="film__button__wrapper">
-            <button type="button" class=" film__button btn__watch" data-movie-id="{{this.id}}">Add to watched</button>
-            <button type="button" class=" film__button btn__queue" data-movie-id="{{this.id}}">Add to queue</button>
+        <div class="film__button__wrapper flip-2-hor-top-1 ">
+            <button type="button" class=" film__button btn__watch animate__animated animate__flipInX " data-movie-id="{{this.id}}">Add to watched</button>
+            <button type="button" class=" film__button btn__queue animate__animated animate__flipInX" data-movie-id="{{this.id}}">Add to queue</button>
         </div>
-        <button type="button" class="close__button" data-action="close-modal"></button>
+        <button type="button" class="close__button animate__animated animate__flipInX" data-action="close-modal"></button>
     </div>
 </div>
