--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -7,12 +7,12 @@
     background-size: cover;
     background: $background-color;
     background-image: linear-gradient(rgba(0,0,0,.56),rgba(0,0,0,.56)), url(../images/home-bg-new.jpg);
-}
 
-.page-header.library-bg{
+&.library-bg{
     background-image: linear-gradient(rgba(0,0,0,.56),rgba(0,0,0,.56)), url(../images/library-bg.jpg);
-
 }
+}
+
 .main-nav {
     display: flex;
     padding-top: 20px;    
@@ -52,13 +52,11 @@ color: $white-color;
 }
 
 
-.site-nav{
+.site-nav {
     display: flex;
     align-items: center;
     
-}
-
-.site-nav__btn {
+&__btn {
     font-weight: 500;
     font-size: 12px;
     line-height: 14px;
@@ -71,7 +69,7 @@ color: $white-color;
     border: none;
     text-transform: uppercase;
     
-}
+}}
 
 
 .current::after {
@@ -99,6 +97,7 @@ padding-bottom: 60px;
     width: 300px;
     
 }
+
 .input{
     color: $white-color;
     border-bottom: 1px solid $white-color;
@@ -108,13 +107,14 @@ padding-bottom: 60px;
     border-left: 0;
     border-right: 0;
     background-color: transparent;
-}
 
-.input::placeholder {
+    &::placeholder {
     color: $white-color;
     margin:0;
     padding: 0;
 }
+}
+
 .icon-search {
     position: absolute;
     right: 0;
