--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,8 +4,14 @@
     <div class="footer-lisense">
       <p>&copy; 2021 | All Rights Reserved |</p>
       <p> Made by profesionals |
-      by <a href="https://goit.ua/">GOIT</a>
-      <span>Students</span>
+        <!-- <span class="heart">
+          <svg class="heart-icon">
+            
+            <use class="heart-icon-svg"href="./images/heart.svg#icon-heart" width = "20" height = "20"></use>
+          </svg>
+        </span> -->
+      by <a href="https://goit.ua/">GoIT</a>
+      <span footer-modal-open class="modal-students-text">Students</span>
       </p>
     </div>
   </div>
