--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -5,5 +5,6 @@ $accent-color: #ff6b08;
 $background-color: rgba(0, 0, 0, 0.8);
 $background-modal-color: lightgrey;
 $footer-bgd-color: #F7F7F7;
+$feature-gap: 30px;
 
 $primary-font-family: 'Roboto', sans-serif;
