--- a/src/template/tmp-card.hbs
+++ b/src/template/tmp-card.hbs
@@ -1,7 +1,10 @@
 {{#each this}}
+<li class="gallery-item">
 <div class="photo-card">
     
-        <div class="thumb"><img src="https://www.themoviedb.org/t/p/w300{{poster_path}}" loading="lazy" data-movie-id="{{id}}"/></div>
+        <div class="thumb">
+            <img src="https://www.themoviedb.org/t/p/w300{{poster_path}}" loading="lazy" data-movie-id="{{id}}"/>
+        </div>
         <div class="info">
             <p class="title">
                 {{title}}
@@ -14,5 +17,5 @@
                 </p>
         </div>
     
-</div>
+</div></li>
 {{/each}}
