--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -45,7 +45,7 @@
     margin: auto;
     width: 618px;
     height: 562px;
-    padding: 42px 29px 40px 28px;
+    padding: 80px 29px 40px 28px;
   }
   @media screen and (min-width: $desktop) {
     display: flex;
@@ -59,8 +59,16 @@
   display: flex;
 }
 .film__button {
-  width: 100px;
-  height: 40px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.33;
+  text-transform: uppercase;
+  text-decoration: none;
+  display: inline-block;
+  padding: 12px 10px;
+  border-radius: 5px;
+  border: 1px solid #000;
+  cursor: pointer;
   text-align: center;
   border-radius: 5px;
   background-color: $white-color;
@@ -72,7 +80,6 @@
     background-color: $accent-color;
     color: $white-color;
     border: 1px solid $accent-color;
-
   }
 }
 
@@ -145,6 +152,7 @@
   font-size: 20px;
   line-height: 1.15;
   margin-bottom: 20px;
+  text-transform: uppercase;
   @media screen and (min-width: $desktop) {
     font-size: 30px;
     line-height: 1.17;
@@ -154,15 +162,19 @@
 .film__item {
   display: flex;
   margin-bottom: 10px;
+  line-height: 1.17;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.3;
 }
 .film__details {
-  color: $footer-text-color;
-  min-width: 108px;
+  color: $modal-info-color;
+
+  width: 100px;
 }
 
 .film__info--uper {
   text-transform: uppercase;
-  line-height: 1.17;
 }
 
 .film__rating--orange {
@@ -179,10 +191,12 @@
 
 .film__about__title {
   text-transform: uppercase;
-  margin-top: 10px;
+  margin-top: 20px;
   margin-bottom: 10px;
 }
 .film__about__text {
-  line-height: 1.67;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.6;
   margin-bottom: 21px;
 }
