--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -10,8 +10,8 @@
             <use class="heart-icon-svg"href="./images/heart.svg#icon-heart" width = "20" height = "20"></use>
           </svg>
         </span> -->
-      by <a href="https://goit.ua/">GoIT</a>
-      <span footer-modal-open class="modal-students-text">Students</span>
+      by <a href="https://goit.ua/" target="_blank">GoIT</a>
+      <a href="#" footer-modal-open class="modal-students-text">Students</a>
       </p>
     </div>
   </div>
