--- a/src/partials/modal_footer.html
+++ b/src/partials/modal_footer.html
@@ -23,12 +23,12 @@
            <div class="card-set__hover-box">
    
            <!-- <span class="team-contact"> -->
-             <a href="https://github.com/MarynaSkyba">
+             <a href="https://github.com/MarynaSkyba" target="_blank">
                <svg class="git">
                  <use href="./images/symbol-defs.svg#icon-github" width="50px"></use>
                </svg>
              </a>
-             <a href="https://www.linkedin.com/in/maryna-skyba-b9625a8a">
+             <a href="https://www.linkedin.com/in/maryna-skyba-b9625a8a" target="_blank">
                <svg class="linkedin">
                  <use href="./images/symbol-defs.svg#icon-linkedin" width="50px"></use>
                </svg>
@@ -60,12 +60,12 @@
              <div class="card-set__hover-box">
      
              <span class="team-contact">
-               <a href="https://github.com/Anastasiia88Z">
+               <a href="https://github.com/Anastasiia88Z" target="_blank">
                  <svg class="git">
                    <use href="./images/symbol-defs.svg#icon-github" width="50px"></use>
                  </svg>
                </a>
-               <a href="https://www.linkedin.com/in/anastasiia-zhylina-a8a282214/">
+               <a href="https://www.linkedin.com/in/anastasiia-zhylina-a8a282214/" target="_blank">
                  <svg class="linkedin">
                    <use href="./images/symbol-defs.svg#icon-linkedin" width="50px"></use>
                  </svg>
@@ -99,12 +99,12 @@
        <div class="card-set__hover-box">
 
        <span class="team-contact">
-         <a href="https://github.com/liana13555">
+         <a href="https://github.com/liana13555" target="_blank">
            <svg class="git">
              <use href="./images/symbol-defs.svg#icon-github" width="50px"></use>
            </svg>
          </a>
-         <a href="https://www.linkedin.com/in/liana-baryshova-b5527078/">
+         <a href="https://www.linkedin.com/in/liana-baryshova-b5527078/" target="_blank">
            <svg class="linkedin">
              <use href="./images/symbol-defs.svg#icon-linkedin" width="50px"></use>
            </svg>
@@ -135,12 +135,12 @@
          <div class="card-set__hover-box">
   
          <span class="team-contact">
-           <a href="https://github.com/JulieJud">
+           <a href="https://github.com/JulieJud" target="_blank">
              <svg class="git">
                <use href="./images/symbol-defs.svg#icon-github" width="50px"></use>
              </svg>
            </a>
-           <a href="https://www.linkedin.com/in/julie-judachina-a990a734/">
+           <a href="https://www.linkedin.com/in/julie-judachina-a990a734/" target="_blank">
              <svg class="linkedin">
                <use href="./images/symbol-defs.svg#icon-linkedin" width="50px"></use>
              </svg>
@@ -171,12 +171,12 @@
            <div class="card-set__hover-box">
     
            <span class="team-contact">
-             <a href="https://github.com/Sluchevska">
+             <a href="https://github.com/Sluchevska" target="_blank">
                <svg class="git">
                  <use href="./images/symbol-defs.svg#icon-github" width="50px"></use>
                </svg>
              </a>
-             <a href="https://www.linkedin.com/in/aleksandra-sluchevska-3b0939206/">
+             <a href="https://www.linkedin.com/in/aleksandra-sluchevska-3b0939206/" target="_blank">
                <svg class="linkedin">
                  <use href="./images/symbol-defs.svg#icon-linkedin" width="50px"></use>
                </svg>
@@ -207,12 +207,12 @@
              <div class="card-set__hover-box">
       
              <span class="team-contact">
-               <a href="https://github.com/Aleks24dan">
+               <a href="https://github.com/Aleks24dan" target="_blank">
                  <svg class="git">
                    <use href="./images/symbol-defs.svg#icon-github" width="50px"></use>
                  </svg>
                </a>
-               <a href="https://www.linkedin.com/in/aleksandr-danylov-63246b215/">
+               <a href="https://www.linkedin.com/in/aleksandr-danylov-63246b215/" target="_blank">
                  <svg class="linkedin">
                    <use href="./images/symbol-defs.svg#icon-linkedin" width="50px"></use>
                  </svg>
@@ -243,12 +243,12 @@
              <div class="card-set__hover-box">
       
              <span class="team-contact">
-               <a href="https://github.com/Wences81">
+               <a href="https://github.com/Wences81" target="_blank">
                  <svg class="git">
                    <use href="./images/symbol-defs.svg#icon-github" width="50px"></use>
                  </svg>
                </a>
-               <a href="https://www.linkedin.com/in/vyacheslav-zhylin-47b8b369/">
+               <a href="https://www.linkedin.com/in/vyacheslav-zhylin-47b8b369/" target="_blank">
                  <svg class="linkedin">
                    <use href="./images/symbol-defs.svg#icon-linkedin" width="50px"></use>
                  </svg>
