--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -11,6 +11,7 @@
   color: $footer-text-color;
   font-size: 14px;
   line-height: 1.14;
+  margin-bottom: 30px;
 
 
   @media  screen and (min-width: $tablet) {
