--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
 
     <div class="footer-lisense">
       <p>&copy; 2021 | All Rights Reserved |</p>
-      <p> Made by profesionals |
+      <p> Developed with|
         <!-- <span class="heart">
           <svg class="heart-icon">
             
