--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,18 +1,19 @@
-<footer>
-  <div class="container-footer">
-
+<footer class="footer">
+  
     <div class="footer-lisense">
       <p>&copy; 2021 | All Rights Reserved |</p>
-      <p> Made by profesionals |
-        <!-- <span class="heart">
+      <p class="made">  Developed with   
+        <div class="heart">
           <svg class="heart-icon">
             
-            <use class="heart-icon-svg"href="./images/heart.svg#icon-heart" width = "20" height = "20"></use>
+            <use class="heart-icon-svg" href="./images/favorite-heart.svg#favorite-heart" width = "26" height = "26" ></use>
           </svg>
-        </span> -->
-      by <a href="https://goit.ua/">GoIT</a>
-      <span footer-modal-open class="modal-students-text">Students</span>
+        </div>
+        <span class="by">by</span>
+        
+         <a href="https://goit.ua/" class="goit">GoIT</a>
+        <span footer-modal-open class="modal-students-text" >Students</span>
       </p>
     </div>
-  </div>
+ 
 </footer>
