--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -4,6 +4,5 @@ $title-text-color: #000000;
 $accent-color: #ff6b08;
 $background-color: rgba(0, 0, 0, 0.8);
 $background-modal-color: lightgrey;
-$footer-bgd-color: #F7F7F7;
-
+$footer-bgd-color: rgba(247, 247, 247, 1);
 $primary-font-family: 'Roboto', sans-serif;
