--- a/src/template/modal-card-about-film.hbs
+++ b/src/template/modal-card-about-film.hbs
@@ -29,8 +29,9 @@
                 </li>
                 <li class="film__item">
                     <p class="film__details">Genre</p>
-                    <p class="film__info">{{this.genres}}</p>
-                   
+                    {{#each this.genres}}
+                    <p class="film__info">{{name}}</p>
+                    {{/each}}
                 </li>
             </ul>
         </div>
