--- a/src/template/tmp-card.hbs
+++ b/src/template/tmp-card.hbs
@@ -5,16 +5,20 @@
         <div class="thumb">
             <img src="https://www.themoviedb.org/t/p/w300{{poster_path}}" loading="lazy" data-movie-id="{{id}}"/>
         </div>
+        <p class="title">
+            {{title}}
+        </p>
         <div class="info">
-            <p class="title">
-                {{title}}
-            </p>
+          
             <p class="info-item">
                {{vote_average}}
             </p>
+            <p class="info-item">
+                {{release_date}}
+            </p>
             <p class="film-genre">
                 {{genres}}
-                </p>
+            </p>
         </div>
     
 </div></li>
