--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -9,3 +9,6 @@ $footer-bgd-color: #f7f7f7;
 $modal-info-color: #8c8c8c;
 
 $primary-font-family: 'Roboto', sans-serif;
+
+$transition-duration: 250ms;
+$timing-function: cubic-bezier(0.4, 0, 0.2, 1);
