--- a/src/template/modal-card-about-film.hbs
+++ b/src/template/modal-card-about-film.hbs
@@ -41,8 +41,8 @@
             </p>
         </div>
         <div class="film__button__wrapper flip-2-hor-top-1 ">
-            <button type="button" class=" film__button btn__watch animate__animated animate__flipInX " data-movie-id="{{this.id}}">Add to watched</button>
-            <button type="button" class=" film__button btn__queue animate__animated animate__flipInX" data-movie-id="{{this.id}}">Add to queue</button>
+            <button type="button" class="film__button btn-controls btn__watch animate__animated animate__flipInX " data-movie-id="{{this.id}}">Add to watched</button>
+            <button type="button" class=" film__button btn-controls btn__queue animate__animated animate__flipInX" data-movie-id="{{this.id}}">Add to queue</button>
         </div>
         <button type="button" class="close__button animate__animated animate__flipInX" data-action="close-modal"></button>
     </div>
