--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,12 +3,12 @@
     <div class="footer-lisense">
       <p>&copy; 2021 | All Rights Reserved |</p>
       <p class="made">  Developed with   
-        <div class="heart">
+        <span class="heart">
           <svg class="heart-icon">
             
             <use class="heart-icon-svg" href="./images/favorite-heart.svg#favorite-heart" width = "26" height = "26" ></use>
           </svg>
-        </div>
+        </span>
         <span class="by">by</span>
         
          <a href="https://goit.ua/" class="goit">GoIT</a>
