--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -24,15 +24,13 @@
 }
 
 .modal-students-text {
-  color: #ff6b08;
-  text-transform: uppercase;
-  text-decoration: blink;
+  color: rgb(122, 84, 13);
   font-family: Roboto;
-  font-style: oblique;
+  font-style: normal;
+  font-weight: normal;
   font-size: 16px;
-  font-weight: 700;
-  line-height: 1.17;
-  text-shadow: 4px 2px 4px rgb(0 0 0 / 25%);
+  line-height: 19px;
+  border-bottom: 1px solid;
 
   @media screen and (max-width: 480px) {
     font-size: 14px;
@@ -42,32 +40,43 @@
 .heart-icon {
   position: absolute;
   width: 20px;
-  height: 50px;
+  height: 13px;
+  margin-left: 5px;
+  margin-top: 3px;
 
   @media screen and (max-width: 767px) {
-    position: relative;
-    width: 20px;
-    height: 20px;
-    margin-top: 10px;
+    // position: relative;
+    width: 15px;
+    height: 15px;
+    margin-left: 30px;
+    margin-top: 5px;
   }
 }
 
 .goit {
-  margin-left: 15px;
-
+  margin-left: 8px;
+  margin-right: 6px;
+  margin-bottom: 2px;
+  border-bottom: 1px solid;
   @media screen and (max-width: 767px) {
-    margin-left: 10px;
+    margin-left: 30px;
   }
 }
 .made {
   margin-right: 10px;
   margin-left: 5px;
-}
-
-.by {
-  margin-left: 25px;
 
   @media screen and (max-width: 767px) {
-    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 8px;
+    margin-left: 25px;
+    display: inline-block;
+  }
+}
+.by {
+  margin-left: 27px;
+
+  @media screen and (max-width: 767px) {
+    margin-left: 5px;
   }
 }
