--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,13 +15,13 @@
             </div>
         </div>
         <div class="input-container">
-            <label class="form-field">
-                <input class="input" type="text" placeholder="Поиск фильмов">
-                <svg class="icon-search" width="20" height="20" aria-label="Главное меню">
-
+            <form class="form-field">
+                <input class="input" type="text" name="searchQuery" placeholder="Поиск фильмов">
+                
+                <button class="svg-btn" type="submit"><svg class="icon-search" width="20" height="20" aria-label="Главное меню" type ="submit">
                     <use class="icon-menu" href="./images/icon.svg#icon-search-2"></use>
-                </svg>
-            </label>
+                </svg></button>
+            </form>
         </div>
         <div class="nav-btn is-hidden">
             <button class="btn-controls active-btn" id="watched_btn">WATCHED</button>
