--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -14,8 +14,8 @@
         </span>
         <span class="by">by</span>
         
-         <a href="https://goit.ua/" class="goit">GoIT</a>
-        <span footer-modal-open class="modal-students-text" >Students</span>
+         <a href="https://goit.ua/" target="_blank" class="goit">GoIT</a>
+        <a href="#" footer-modal-open class="modal-students-text" >Students</a>
 
       </p>
     </div>
