--- a/src/sass/components/_footer-team.scss
+++ b/src/sass/components/_footer-team.scss
@@ -1,7 +1,11 @@
+ul {
+  list-style: none;
+}
+
 .backdrop {
   position: fixed;
   left: 0;
-  top:0;
+  top: 0;
   width: 100%;
   height: 100%;
 
@@ -14,7 +18,6 @@
 .backdrop.is-hidden {
   opacity: 0;
   visibility: hidden;
-
 }
 
 .team-modal {
@@ -32,144 +35,114 @@
   @media screen and (max-width: 480px) {
     max-width: 80%;
     height: 98%;
-
-
   }
 }
 
 .team-card-list {
-
   @media screen and (min-width: 768px) {
-    
-    
     display: flex;
     flex-wrap: wrap;
     padding: 0;
     margin: 0;
 
-    margin-left: calc( -1 * 0px);
-    margin-top: calc( -1 * 15px);}
+    margin-left: calc(-1 * 0px);
+    margin-top: calc(-1 * 15px);
+  }
 
   @media screen and (max-width: 767px) {
     padding: 0;
     margin: 0;
   }
-  
 }
-
 
 .card-set__card-thumb {
   border-radius: 3%;
 }
 
 .team-card-list-item {
-    &:hover,
-    &:focus {
-      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);}
-  
-    &:hover .card-set__hover-box {
-      transform: translateY(0);}  
-  
-    @media screen and (min-width: 1023px) {
-      
-      flex-basis: calc(100% / 3 - 15px);
-      
-      margin-left: 11px;
-      margin-top: 15px;
-      margin-right: 11;
+  &:hover,
+  &:focus {
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  }
 
-    }
+  &:hover .card-set__hover-box {
+    transform: translateY(0);
+  }
 
-    // @media screen and (min-width: 768px) and (max-width: 1023px) {
-    //   display: flex;
-      
-    //   flex-basis: calc(100% / 2 - 15px);
-    //   margin-left: 15px;
-    //   margin-top: 15px;
-      
-      
-    // }
-  
-    @media screen and (max-width: 767px) {
-      &:not(:last-child) {
-        margin-bottom: 30px;
-      }
+  @media screen and (min-width: 1023px) {
+    flex-basis: calc(100% / 3 - 15px);
+
+    margin-left: 11px;
+    margin-top: 15px;
+    margin-right: 11;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1023px) {
+    flex-basis: calc(100% / 2 - 15px);
+    margin-left: 7px;
+    margin-top: 15px;
+    margin-right: 8px;
+  }
+
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
     }
-  
+  }
 }
-
-
-
-
 
 .card-set__card-thumb {
   position: relative;
   overflow: hidden;
-  
 }
 
-.card-set__hover-box{
-
+.card-set__hover-box {
   position: absolute;
   top: 0;
- 
+
   bottom: 0;
   width: 100%;
   height: 100%;
   background-color: orange;
   flex-grow: 1;
-  
 
   transform: translateY(100%);
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
-ul {
-  list-style: none; 
-}
-
 .team-card-list-img {
   width: 100%;
-  
 }
 
-
-
-
-
 .team-title {
-  padding-top: 15px;
-  padding-bottom: 0px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   text-align: center;
   color: #ff6b08;
   text-transform: uppercase;
   text-decoration: blink;
   font-family: Roboto;
   font-style: oblique;
-  font-size: 35px;
-  font-weight: 700;
-  line-height: 1.17;
-  text-shadow: 4px 2px 4px rgb(0 0 0 / 25%);
 
-  @media screen and (max-width: 480px) {
-    font-size: 25px;
-
+  @media screen and (min-width: 1024px) {
+    font-size: 35px;
+    font-weight: 700;
+    line-height: 1.17;
+    text-shadow: 4px 2px 4px rgb(0 0 0 / 25%);
   }
 }
-
 
 .team-modal-close-button {
   position: absolute;
   top: 8px;
   left: 100%;
-  transform: translateX(-38px); 
+  transform: translateX(-38px);
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: orange;
-  border: 1px solid rgba(0, 0, 0, 0.1); 
+  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   width: 30px;
   height: 30px;
@@ -180,42 +153,22 @@ ul {
   }
 }
 
-
-
 .git {
   @media screen and (min-width: 1023px) {
-
-  margin-left: 120px;
-}
-
-
+    margin-left: 120px;
+    width: 150px;
+  }
 }
 
 .linkedin {
   @media screen and (min-width: 1023px) {
-
-  margin-left: 120px;
-}
-
-
-}
-
-      
-.card-set__card-content {
-
-  @media screen and (min-width: 1023px) {
- 
-  margin-left: 80px;
-  color: #ff6b08;
-  text-transform: uppercase;
-  text-decoration: blink;
-  font-family: Roboto;
-  font-style: oblique;
+    margin-left: 120px;
   }
+}
 
-  @media screen and (max-width: 1023px) {
-    margin-left: 150px;
-    margin-right: auto;
+.card-set__card-content {
+  @media screen and (min-width: 1024px) {
+    text-align: center;
     color: #ff6b08;
     text-transform: uppercase;
     text-decoration: blink;
@@ -223,4 +176,12 @@ ul {
     font-style: oblique;
   }
 
+  @media screen and (max-width: 1023px) {
+    text-align: center;
+    color: #ff6b08;
+    text-transform: uppercase;
+    text-decoration: blink;
+    font-family: Roboto;
+    font-style: oblique;
+  }
 }
