--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,23 +1,23 @@
 <footer class="footer">
-  
-    <div class="footer-lisense">
-      <p>&copy; 2021 | All Rights Reserved |</p>
 
-      <p class="made">  Developed with   
-        <span class="heart">
+  <div class="footer-lisense">
+    <p>&copy; 2021 | All Rights Reserved |</p>
 
-          <svg class="heart-icon">
-            
-            <use class="heart-icon-svg" href="./images/favorite-heart.svg#favorite-heart" width = "26" height = "26" ></use>
-          </svg>
+    <p class="made"> Developed with
+      <span class="heart">
 
-        </span>
-        <span class="by">by</span>
-        
-         <a href="https://goit.ua/" class="goit">GoIT</a>
-        <span footer-modal-open class="modal-students-text" >Students</span>
+        <svg class="heart-icon">
 
-      </p>
-    </div>
- 
+          <use class="heart-icon-svg" href="./images/favorite-heart.svg#favorite-heart" width="26" height="26"></use>
+        </svg>
+
+      </span>
+      <span class="by">by</span>
+
+      <a href="https://goit.ua/" target="_blank" class="goit">GoIT</a>
+      <a href="#" footer-modal-open class="modal-students-text">Students</a>
+
+    </p>
+  </div>
+
 </footer>
