--- a/src/sass/components/_footer-team.scss
+++ b/src/sass/components/_footer-team.scss
@@ -85,9 +85,10 @@ ul {
   }
 
   @media screen and (max-width: 767px) {
-    &:not(:last-child) {
-      margin-bottom: 30px;
-    }
+    // &:not(:last-child) {
+    margin-bottom: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
   }
 }
 
@@ -131,6 +132,11 @@ ul {
     line-height: 1.17;
     text-shadow: 4px 2px 4px rgb(0 0 0 / 25%);
   }
+
+  @media screen and (max-width: 767px) {
+    padding-top: 20px;
+    padding-bottom: 50px;
+  }
 }
 
 .team-modal-close-button {
@@ -154,34 +160,55 @@ ul {
 }
 
 .git {
+  width: 50px;
+  height: 50px;
+
+  display: flex;
+  justify-content: center;
+  margin-right: auto;
+  margin-left: auto;
   @media screen and (min-width: 1023px) {
-    margin-left: 120px;
-    width: 150px;
+    margin-top: 50px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1023px) {
+    margin-top: 40px;
+  }
+
+  @media screen and (max-width: 767px) {
+    margin-top: 70px;
   }
 }
 
 .linkedin {
+  width: 50px;
+  height: 50px;
+
+  display: flex;
+  justify-content: center;
+  margin-right: auto;
+  margin-left: auto;
   @media screen and (min-width: 1023px) {
-    margin-left: 120px;
+    margin-top: 45px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1023px) {
+    margin-top: 45px;
+  }
+
+  @media screen and (max-width: 767px) {
+    margin-top: 50px;
   }
 }
 
 .card-set__card-content {
-  @media screen and (min-width: 1024px) {
-    text-align: center;
-    color: #ff6b08;
-    text-transform: uppercase;
-    text-decoration: blink;
-    font-family: Roboto;
-    font-style: oblique;
-  }
+  text-align: center;
+  color: #ff6b08;
+  text-transform: uppercase;
+  text-decoration: blink;
+  font-family: Roboto;
+  font-style: oblique;
 
-  @media screen and (max-width: 1023px) {
-    text-align: center;
-    color: #ff6b08;
-    text-transform: uppercase;
-    text-decoration: blink;
-    font-family: Roboto;
-    font-style: oblique;
-  }
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
