--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -32,6 +32,7 @@
   position: relative;
   margin: auto;
   background-color: $white-color;
+  border-radius: 15px;
   font-family: Roboto;
   font-size: 14px;
   line-height: 1.14;
