Add modal for trailer

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,3 +8,5 @@
 @import './components/modal';
 @import './components/footer';
 @import './components/footer-team';
+@import './components/lightbox';
+
