--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,4 +9,5 @@
 @import './components/footer';
 @import './components/footer-team';
 @import './components/lightbox';
+@import './components/theme.scss';
 
