--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,37 @@
 <header class="page-header" id="the_body">
 
     <div class="container">
+        <div class="toolbar">
+            <!-- Разметка переключателя темы -->
+            <div class="theme-switch">
+              <svg class="theme-switch__icon" role="img" aria-label="Иконка солнца">
+                <use href="./images/sprite.svg#sun"></use>
+              </svg>
+          
+              <div class="theme-switch__control">
+                <input
+                  class="theme-switch__toggle"
+                  type="checkbox"
+                  name="theme"
+                  id="theme-switch-toggle"
+                  aria-label="Переключить между тёмной и светлой темой"
+                />
+                <label
+                  aria-hidden="true"
+                  class="theme-switch__track"
+                  for="theme-switch-toggle"
+                >
+                </label>
+                <div aria-hidden="true" class="theme-switch__marker"></div>
+              </div>
+          
+              <svg class="theme-switch__icon" aria-label="Иконка луны">
+                <use href="./images/sprite.svg#moon"></use>
+              </svg>
+            </div>
+          </div>
+
+
         <div class="main-nav">
             <a href="./index.html" lang="en" class="logo">
                 <svg class="icon-film" width="24" height="24" aria-label="Главное меню">
@@ -14,6 +45,7 @@
 
             </div>
         </div>
+        
         <div class="input-container">
             <form class="form-field">
                 <input class="input" type="text" name="searchQuery" placeholder="Поиск фильмов">
@@ -23,9 +55,11 @@
                 </svg></button>
             </form>
         </div>
+
         <div class="nav-btn is-hidden">
             <button class="btn-controls active-btn" id="watched_btn">WATCHED</button>
             <button class="btn-controls" id="queue_btn">QUEUE</button>
         </div>
+        
     </div>
 </header>
