--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -16,5 +16,16 @@
 
 #topcontrol {
   margin-bottom: 100px;
-  margin-right: 70px;
+  margin-right: 40px;
+
+  @media screen and (min-width: $tablet) and (max-width: $desktop) {
+    margin-bottom: 110px;
+    margin-right: 30px;
+  }
+  @media screen and (min-width: $mobile) and (max-width: $tablet) {
+    margin-bottom: 100px;
+    margin-right: 10px;
+    max-width: 30px;
+    max-height: 30px;
+  }
 }
