--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -45,14 +45,14 @@
   @media screen and (min-width: $tablet) and (max-width: $desktop) {
     display: flex;
     margin: auto;
-    width: 618px;
-    height: 562px;
+  max-width: 618px;
+    max-height: 562px;
     padding: 80px 29px 40px 28px;
   }
   @media screen and (min-width: $desktop) {
     display: flex;
-    width: 882px;
-    height: 568px;
+    max-width: 882px;
+    max-height: 568px;
     padding: 50px 30px 40px 30px;
   }
 }
